--- a/ChemStock/MainWindow.xaml
+++ b/ChemStock/MainWindow.xaml
@@ -1,9 +1,9 @@
-﻿<Window x:Class="ChemStock.MainWindow"
+﻿<Window x:Class="AutoStock.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:ChemStock"
+        xmlns:local="clr-namespace:AutoStock"
         mc:Ignorable="d"
         Title="AutoStock Manager - Управление складом автозапчастей" 
         Icon="assets/icon.ico"
