--- a/ChemStock/App.xaml
+++ b/ChemStock/App.xaml
@@ -1,7 +1,7 @@
-﻿<Application x:Class="ChemStock.App"
+﻿<Application x:Class="AutoStock.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:ChemStock"
+             xmlns:local="clr-namespace:AutoStock"
              StartupUri="LoginWindow.xaml">
     <Application.Resources>
         <!-- Стиль для кнопок приборной панели -->
