--- a/ChemStock/InputDialog.xaml
+++ b/ChemStock/InputDialog.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="ChemStock.InputDialog"
+﻿<Window x:Class="AutoStock.InputDialog"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="{Binding newTitle}" 
