--- a/ChemStock/LoginWindow.xaml
+++ b/ChemStock/LoginWindow.xaml
@@ -1,10 +1,10 @@
-﻿<Window x:Class="ChemStock.LoginWindow"
+﻿<Window x:Class="AutoStock.LoginWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         Icon="assets/icon.ico"
-        xmlns:local="clr-namespace:ChemStock"
+        xmlns:local="clr-namespace:AutoStock"
         mc:Ignorable="d"
         Title="LoginWindow" Height="256" Width="300">
     <Window.Resources>
