--- a/ChemStock/UsersPage.xaml
+++ b/ChemStock/UsersPage.xaml
@@ -1,4 +1,4 @@
-﻿<Page x:Class="ChemStock.UsersPage"
+﻿<Page x:Class="AutoStock.UsersPage"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
